tests/expectations/parser/functions/mut_input_fail.out
Error [EPAR0370005]: expected ':' -- found 'a'
    --> test:3:10
     |
   3 | fn f(mut a: u8) {}
     |          ^
